Chapter3/2.3/manifests/log-output-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput-2-3-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput-2-3
  template:
    metadata:
      labels:
        app: logoutput-2-3
    spec:
      containers:
        - name: logoutput-2-3
          image: carlossss1011/2_3_logoutput
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
