Chapter3/2.3/manifests/pingpong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-2-3-svc
  namespace: exercises
spec:
  selector:
    app: pingpong-2-3
  ports:
    - protocol: TCP
      port: 2010
      targetPort: 3000
